--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -27,7 +27,7 @@
 #monitor=,preferred,auto,auto
 #monitor=DP-2,1920x1080@144,auto,1
 monitor=desc:Microstep MSI G241 0x30303847,highrr,0x0,1
-monitor=Unknown-1,disable
+# monitor=Unknown-1,disable
 
 
 ###################
@@ -39,7 +39,9 @@ monitor=Unknown-1,disable
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+$menu = tofi-drun --drun-launch=true
+# $menu = tofi-drun --drun-launch=true --font "$(nix eval nixpkgs#mona-sans.outPath --raw)/share/fonts/truetype/MonaSans-SemiBold.ttf"
+# $menu = wofi --show drun
 
 
 #################
@@ -157,6 +159,8 @@ misc {
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
 
+layerrule = blur, launcher
+
 
 #############
 ### INPUT ###
@@ -207,6 +211,8 @@ bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
+# bind = $mainMod, D, exec, ./tofi.sh
+# bind = $mainMod, D, exec, tofi-drun --drun-launch=true --font "$(nix eval nixpkgs#mona-sans.outPath --raw)/share/fonts/truetype/MonaSans-SemiBold.ttf"
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
@@ -405,6 +411,7 @@ exec-once=obsidian
 exec-once=mako
 #exec-once=notion-app-enhanced
 #exec-once=mpvpaper -o "loop no-audio" DP-1 /mnt/win2/Wallpapers/spacewall.mp4 
+exec-once=mpvpaper -o "loop no-audio" DP-2 /home/jd1t/.config/hypr/rainy_night.mkv
 #exec-once=waybar 
 exec-once=xset r rate 300 50
 #exec-once=./bin/long_apps.sh
@@ -416,9 +423,6 @@ exec-once = wl-paste --type image --watch cliphist store #Stores only image data
 # exec-once =./bin/startup_ap.sh
 # exec-once=mako
 #exec-once=./bin/wall
-#exec-once=mpvpaper -o "no-audio loop" DP-1 /mnt/win2/Wallpapers/New/berserk.mkv
-#exec-once=mpvpaper -o "no-audio loop" -f -p DP-1 ~/Downloads/dark-street-lights-moewalls-com.mp4
-#exec-once=swaybg -o DP-3 -i Downloads/midnight-train-1920~W1080.jpg -m fit
 #exec-once=nohup ./bin/wobpipe
 #exec-once=nohup ./bin/check_internet
 #exec-once=nohup source ~/bin/set_border
