--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -119,10 +119,10 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-        
+        size = 6
+        passes = 3
         vibrancy = 0.1696
+        xray = true
     }
 }
 
@@ -154,7 +154,7 @@ dwindle {
 # }
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
-misc { 
+misc {
     force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
 }
@@ -194,6 +194,11 @@ gestures {
 device {
     name = epic-mouse-v1
     sensitivity = -0.3
+}
+
+binds {
+    # allow_workspace_cycles = true
+    workspace_back_and_forth = true
 }
 
 
@@ -397,12 +402,11 @@ windowrulev2=float,class:Tk
 windowrulev2=float,class:Toplevel
 
 # Shimeji
-windowrule=float, com-group_finity-mascot-Main
-windowrule=noblur, com-group_finity-mascot-Main
-windowrule=nofocus, com-group_finity-mascot-Main
-windowrule=noshadow, com-group_finity-mascot-Main
-windowrule=noborder, com-group_finity-mascot-Main
-
+# windowrule=float, com-group_finity-mascot-Main
+# windowrule=noblur, com-group_finity-mascot-Main
+# windowrule=nofocus, com-group_finity-mascot-Main
+# windowrule=noshadow, com-group_finity-mascot-Main
+# windowrule=noborder, com-group_finity-mascot-Main
 
 exec-once=discord
 exec-once=telegram-desktop
