--- a/configs/hypr/keybinds.conf
+++ b/configs/hypr/keybinds.conf
@@ -11,7 +11,8 @@ bind = $mainMod SHIFT, Q, killactive,
 bind = $mainMod SHIFT, E, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, D, exec, ./scripts/tofi.sh
+bind = $mainMod, D, exec, tofi-drun --drun-launch=true
+# bind = $mainMod, D, exec, ./scripts/tofi.sh
 # bind = $mainMod, D, exec, ./tofi.sh
 # bind = $mainMod, D, exec, tofi-drun --drun-launch=true --font "$(nix eval nixpkgs#mona-sans.outPath --raw)/share/fonts/truetype/MonaSans-SemiBold.ttf"
 bind = $mainMod, P, pseudo, # dwindle
