--- a/configs/hypr/decoration.conf
+++ b/configs/hypr/decoration.conf
@@ -74,5 +74,6 @@ layerrule = blur, launcher
 
 
 binds {
-    workspace_back_and_forth = true
+    # workspace_back_and_forth = true
+    allow_workspace_cycles = true
 }
