Shifted to new nvim setup

--- a/configs/hypr/system.conf
+++ b/configs/hypr/system.conf
@@ -8,6 +8,7 @@
 $terminal = kitty
 $fileManager = dolphin
 $menu = tofi-drun --drun-launch=true
+$editor = nvim
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -17,6 +18,7 @@ $menu = tofi-drun --drun-launch=true
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = EDITOR,nvim
 # env = WLR_NO_HARDWARE_CURSORS,1
 # env = LIBVA_DRIVER_NAME,nvidia
 # env = XDG_SESSION_TYPE,wayland
