--- a/configs/hypr/autostart.conf
+++ b/configs/hypr/autostart.conf
@@ -2,7 +2,8 @@ exec-once=discord
 exec-once=telegram-desktop
 exec-once=obsidian
 exec-once=mako
-exec-once=mpvpaper -o "loop no-audio" DP-2 $HOME/.config/hypr/wall/rainy_night.mkv
+# exec-once=mpvpaper -o "loop no-audio" DP-2 $HOME/.config/hypr/wall/rainy_night.mkv
+exec-once=mpvpaper -o "loop no-audio" DP-2 $HOME/.config/hypr/wall/OW.mp4
 exec-once=xset r rate 300 50 # Speed up keyboard presses rate
 exec-once=hyprpaper
 exec-once=hyprctl dispatch workspace 1
