Quarto Python Keymap added

--- a/configs/hypr/keybinds.conf
+++ b/configs/hypr/keybinds.conf
@@ -17,7 +17,7 @@ bind = $mainMod, P, pin  # Pin the Window
 # bind = $mainMod, D, exec, ./tofi.sh
 # bind = $mainMod, D, exec, tofi-drun --drun-launch=true --font "$(nix eval nixpkgs#mona-sans.outPath --raw)/share/fonts/truetype/MonaSans-SemiBold.ttf"
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, T, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
@@ -72,6 +72,7 @@ bind=SUPER,TAB,workspace,previous
 
 
 bind=SUPER_ALT,F,exec,floorp
+bind=SUPER_ALT,Z,exec,zen
 bind=SUPER_ALT,B,exec,brave
 bind=SUPER_ALT,C,exec,chromium --incognito --disable-gpu-driver-bug-workarounds --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind=SUPER_ALT,T,exec,telegram-desktop
